Issue #115: Adjust z-index with modal dropbuttons Fixes #115

--- a/css/paragraphs.css
+++ b/css/paragraphs.css
@@ -31,6 +31,13 @@ html.dialog-open {
   margin: 2px 2px 10px 10px;
   display: none;
   min-height: 2em;
+  position: relative;
+  z-index: 10;
+}
+
+.paragraphs-item-modal-admin > .content {
+  position: relative;
+  z-index: 9;
 }
 
 .paragraphs-item-modal-admin {
